--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  url_launcher: ^5.4.5
+  auto_size_text: ^2.1.0
+  google_maps_flutter: ^1.0.6
+  location: ^3.0.2
+  latlng: ^0.0.2
+  geolocator: ^5.3.1
+  http: ^0.12.2
+  cloud_firestore: ^0.14.3
 
 dev_dependencies:
   flutter_test:
