--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^5.3.1
   http: ^0.12.2
   cloud_firestore: ^0.14.3
+  firebase_core: ^0.5.2
 
 dev_dependencies:
   flutter_test:
