history page ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.12.2
   cloud_firestore: ^0.14.3
   firebase_core: ^0.5.2
+  lottie: ^0.7.0+1
 
 dev_dependencies:
   flutter_test:
