FIREBASE AUTH WORKS!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   lottie: ^0.7.0+1
   flutter_svg: ^0.19.1
   shared_preferences: ^0.5.12+4
+  firebase_auth: ^0.18.3
+  google_sign_in: ^4.1.1
+  provider: ^4.3.2+2
+
 
 dev_dependencies:
   flutter_test:
