--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  url_launcher: ^5.4.5
   auto_size_text: ^2.1.0
   google_maps_flutter: ^1.0.6
   location: ^3.0.2
@@ -47,6 +46,8 @@ dependencies:
   google_sign_in: ^4.1.1
   provider: ^4.3.2+2
   intl: ^0.16.1
+  geocoder: ^0.2.1
+  url_launcher: ^5.7.10
 
 
 
